<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/slot1"
        android:title="@string/player1"
        />
    <item
        android:id="@+id/slot2"
        android:title="@string/player2"
        />
    <item
        android:id="@+id/slot3"
        android:title="@string/player3"
        />
    <item
        android:id="@+id/slot4"
        android:title="@string/player4"
        />
    <item
        android:id="@+id/slot5"
        android:title="@string/player5"
        />
    <item
        android:id="@+id/leonard"
        android:title="@string/leonard"
        />
    <item
        android:id="@+id/penny"
        android:title="@string/penny"
        />
    <item
        android:id="@+id/sheldon"
        android:title="@string/sheldon"
        />
</menu>