<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/myColour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerStatsActivity">


    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/textColour"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_shape_btn"
        android:onClick="onClickMainMenu"
        android:text="@string/mainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/btnPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/textColour"
        android:onClick="onClickPlayer"
        android:text="@string/pickPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_shape_btn"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/btnDeletePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/textColour"
        android:onClick="onClickDeletePlayer"
        android:background="@drawable/round_shape_btn"
        android:text="@string/deletePlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_shape_btn"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/textColour"
        android:onClick="onClickDeleteAll"
        android:text="@string/deleteAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/btnDeletePlayer"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.018" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayer"
        app:layout_constraintVertical_bias="0.067">

        <TableRow
            android:layout_width="113dp"
            android:layout_height="377dp"
            android:textColor="@color/textColour">

            <TextView
                android:id="@+id/txtWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textColor="@color/textColour"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/wins" />

            <TextView
                android:id="@+id/txtNrWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textColor="@color/textColour"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/textColour">

            <TextView
                android:id="@+id/txtLosses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="8dp"
                android:textColor="@color/textColour"
                android:layout_marginTop="8dp"
                android:text="@string/losses" />

            <TextView
                android:id="@+id/txtNrLosses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:textColor="@color/textColour"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/textColour">

            <TextView
                android:id="@+id/txtDraws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColour"
                android:layout_column="0"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/draws" />

            <TextView
                android:id="@+id/txtNrDraws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/textColour"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/zero" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>